[project]
name = "zentist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "google>=3.0.0",
    "google-api-python-client>=2.175.0",
    "google-auth>=2.40.3",
    "openai-agents[litellm]>=0.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "pytz>=2025.2",
    "sendgrid>=6.12.4",
    "sqlmodel>=0.0.24",
]
